Update src/jnp/tmg/gui/HomePage.java